--- a/01 - Variáveis/Exercício Variáveis.ipynb
+++ b/01 - Variáveis/Exercício Variáveis.ipynb
@@ -231,7 +231,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite seu nome:  thiago\n"
@@ -277,7 +277,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite sua idade:  37\n"
@@ -315,7 +315,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Qual linguagem você deseja aprender?  Python\n"
@@ -361,7 +361,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Qual a data de hoje?  16/11/2023\n"
@@ -400,24 +400,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "ae15b58c-3505-40ad-a337-29b95d692d61",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Em que dia da semana estamos?  quinta feira\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hoje é quinta feira\n"
+      "Hoje é segunda\n"
      ]
     }
    ],
@@ -451,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
