--- a/04 - Operadores Aritiméticos/Operadores Aritiméticos.ipynb
+++ b/04 - Operadores Aritiméticos/Operadores Aritiméticos.ipynb
@@ -224,6 +224,20 @@
     "\n",
     "print(produto_1 ** produto_2)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d0d6925e",
+   "metadata": {},
+   "source": [
+    " ### Ordem de Procedência\n",
+    " \n",
+    "    () --->\n",
+    "    **  --->\n",
+    "    * ou / --->\n",
+    "    + ou -"
+   ]
   }
  ],
  "metadata": {
