--- a/04 - Operadores Aritiméticos/Exercício - Operadores Aritméticos.ipynb
+++ b/04 - Operadores Aritiméticos/Exercício - Operadores Aritméticos.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "225f01c3-a241-405f-8ec8-c52db1b6935e",
    "metadata": {},
    "outputs": [
@@ -28,14 +28,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O valor digitado vezes 5 é igual a: 25.\n"
+      "2 * 5 = 10.\n"
      ]
     }
    ],
    "source": [
     "numero = int(input('Digite um número:'))\n",
     "\n",
-    "print(f'O valor digitado vezes 5 é igual a: {numero*5}.')\n",
+    "print(f'{numero} * 5 = {numero*5}.')\n",
     "\n"
    ]
   },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "f2835437-8ebc-4626-961f-3ef705c40333",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " A soma dos números digitados é: 20.\n"
+      " 2 + 2 = 4.\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "n1 = int(input('Digite um número:'))\n",
     "n2 = int(input('Digite um número:'))\n",
     "\n",
-    "print(f' A soma dos números digitados é: {n1+n2}.')\n",
+    "print(f' {n1} + {n2} = {n1+n2}.')\n",
     "\n"
    ]
   },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "43c8304d-ee14-4428-b598-a312e09d4244",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A subtração dos números fornecidos é: 0.\n"
+      " 2 - 3 = -1.\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
     "n1 = int(input('Digite um número:'))\n",
     "n2 = int(input('Digite um número:'))\n",
     "\n",
-    "print(f'A subtração dos números fornecidos é: {n1-n2}.')\n",
+    "print(f' {n1} - {n2} = {n1-n2}.')\n",
     "\n"
    ]
   },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "493dd9a4-a3bc-4d28-a0e1-20be5f41c1e1",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A média final é: 7.85\n"
+      "A média final é: 7.50\n"
      ]
     }
    ],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "b58d23a3-75f4-4815-92b4-709d77c78d8e",
    "metadata": {},
    "outputs": [
@@ -192,13 +192,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0\n"
+      "10.0 metros equivalem a 1000.0 centimetros\n"
      ]
     }
    ],
    "source": [
-    "valor = 1000\n",
-    "print(valor/100)\n",
+    "metros = float(input('Digite valor em metros'))\n",
+    "centimetros = metros*100\n",
+    "\n",
+    "print(f'{metros:.2f} m equivalem a {centimetros:.2f} cm.')\n",
     "\n"
    ]
   },
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "ecfda305-93ac-4bd2-ad5c-f8c20971e05e",
    "metadata": {},
    "outputs": [
@@ -234,14 +236,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n"
+      "1000.12 centimentros equivalem a 10.00 metros.\n"
      ]
     }
    ],
    "source": [
-    "valor = 1\n",
-    "print(valor*100)\n",
-    "\n"
+    "centimetros = float(input('Digite valor em cm'))\n",
+    "metros = centimetros/100\n",
+    "\n",
+    "print(f'{centimetros:.2f} cm equivalem a {metros:.2f} m.')\n"
    ]
   },
   {
@@ -267,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "96d5f9ec-79ce-4b56-abc7-7ed8cd70dd77",
    "metadata": {},
    "outputs": [
@@ -275,15 +278,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n"
+      "O seu salário será de R$ 100.00\n"
      ]
     }
    ],
    "source": [
-    "valor_hora = int(input('Qual o valor da sua hora trabalhada?'))\n",
-    "horas_trabalhadas = int(input('Quantas horas você trabalhou no mês?'))\n",
+    "valor_hora = float(input('Qual o valor da sua hora trabalhada?'))\n",
+    "horas_trabalhadas = float(input('Quantas horas você trabalhou no mês?'))\n",
     "\n",
-    "print(valor_hora*horas_trabalhadas)\n",
+    "print(f'O seu salário será de R$ {valor_hora*horas_trabalhadas:.2f}.')\n",
     "\n"
    ]
   },
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "34f4160a-3be5-44db-b877-6bc3bbe5e557",
    "metadata": {},
    "outputs": [
@@ -319,13 +322,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "2 ao quadrado = 4\n"
      ]
     }
    ],
    "source": [
     "n1 = int(input('Digite um número:'))\n",
-    "print(n1**2)\n",
+    "print(f'{n1} ao quadrado = {n1**2}')\n",
     "\n"
    ]
   },
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "d7cd9d8a-dabd-40bf-a660-1dfbeb8a6ce3",
    "metadata": {},
    "outputs": [
@@ -357,13 +360,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10,11,9\n"
+      "O numero seguinte de 10 é 11 e o anterior é 9.\n"
      ]
     }
    ],
    "source": [
     "n1 = int(input('Digite um número:'))\n",
-    "print (f'{n1},{n1+1},{n1-1}')\n",
+    "print (f'O numero seguinte de {n1} é {n1+1} e o anterior é {n1-1}.')\n",
     "\n",
     "\n"
    ]
