--- a/05 - Operadores Relacionais/Aula - Operadores Relacionais.ipynb
+++ b/05 - Operadores Relacionais/Aula - Operadores Relacionais.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5024a926-dda9-4285-9914-d6a33bcccd15",
    "metadata": {},
    "outputs": [
@@ -181,14 +181,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O númeor é impar\n"
+      "O número é impar\n"
      ]
     }
    ],
    "source": [
     "n1 = int(input('Digite um número:'))\n",
     "\n",
-    "if n1/2==0:\n",
+    "if n1%2==0:\n",
     "    print ('O número é par')\n",
     "else:\n",
     "    print('O número é impar')\n"
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "c9264b79-e7ec-4e01-b1f5-adacf2890e2e",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Orçamento estourado\n"
+      "\n",
+      "    Salario: R$ 100.00\n",
+      "    Gastos: R$ 200.00\n",
+      "    ----------------------------\n",
+      "    Orçamento estourado!\n"
      ]
     }
    ],
@@ -452,9 +456,17 @@
     "saldo = salario - gasto\n",
     "\n",
     "if saldo>=0:\n",
-    "    print('Gastos dentro do orçamento')\n",
+    "    print(f'''\n",
+    "    Salario: R$ {salario:.2f}\n",
+    "    Gastos:  R$ {gasto:.2f}\n",
+    "    ----------------------------\n",
+    "    Gastos dentro do orçamento''')\n",
     "else:\n",
-    "    print ('Orçamento estourado')\n"
+    "    print(f'''\n",
+    "    Salario: R$ {salario:.2f}\n",
+    "    Gastos:  R$ {gasto:.2f}\n",
+    "    ----------------------------\n",
+    "    Orçamento estourado!''')\n"
    ]
   },
   {
