--- a/05 - Operadores Relacionais/Extra - Operadores Relacionais.ipynb
+++ b/05 - Operadores Relacionais/Extra - Operadores Relacionais.ipynb
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "c8d8f48b-ff04-4e37-9cc5-90ccb1131b5c",
    "metadata": {
     "tags": []
@@ -758,9 +758,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUBTOTAL: R$ 300.0\n",
-      "DESCONTO: R$ 15.0\n",
-      "TOTAL: R$ 285.0\n",
+      "SUBTOTAL: R$ 200.0\n",
+      "DESCONTO: R$ 10.0\n",
+      "TOTAL: R$ 190.0\n",
       "    \n"
      ]
     }
@@ -794,8 +794,7 @@
     "    \"\"\")\n",
     "    \n",
     "else:\n",
-    "    print(\"Opção de pagamento inválida. Operação cancelada\")\n",
-    "\n"
+    "    print(\"Opção de pagamento inválida. Operação cancelada\")\n"
    ]
   },
   {
