--- a/06 - Operadores Logicos/Exercicio - Operadores Lógicos.ipynb
+++ b/06 - Operadores Logicos/Exercicio - Operadores Lógicos.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A letra digitada é uma consoante\n"
+      "A letra: \"m\" é uma consoante\n"
      ]
     }
    ],
@@ -80,10 +80,10 @@
     "vogal = ['a','e','i','o','u']\n",
     "\n",
     "if letra in vogal:\n",
-    "    print ('A letra é uma vogal')\n",
+    "    print (f'A letra: \"{letra}\" é uma vogal')\n",
     "\n",
     "else:\n",
-    "    print ('A letra digitada é uma consoante')\n"
+    "    print (f'A letra: \"{letra}\" é uma consoante')\n"
    ]
   },
   {
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Você ainda precisa trabalhar!\n"
+      "Você pode se aposentar.\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ce64ae63-da6a-4300-a05c-a9d9bfbfb780",
    "metadata": {},
    "outputs": [
@@ -235,31 +235,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    Subtotal: R$ 300.0\n",
-      "    Desconto cartão loja: R$ 15.0\n",
-      "    TOTAL: R$ 285.0\n",
+      "    Subtotal: R$ 500.00\n",
+      "    Desconto cartão loja: R$ 25.0\n",
+      "    TOTAL: R$ 475.00\n",
       "    \n"
      ]
     }
    ],
    "source": [
     "compra = float(input(\"Qual o valor total da compra: \"))\n",
-    "cartão_loja = input('''\n",
+    "cartão_loja = int(input('''\n",
     "Você possui o valor da loja:\n",
     "1-SIM\n",
     "2-NÃO\n",
-    "''')\n",
+    "'''))\n",
     "\n",
-    "if compra>=100.00 and cartão_loja.lower() == \"1\":\n",
+    "if compra>=100.00 and cartão_loja == 1:\n",
     "    DESCONTO = (compra*0.05)\n",
     "    print(f\"\"\"\n",
-    "    Subtotal: R$ {compra}\n",
-    "    Desconto cartão loja: R$ {DESCONTO}\n",
-    "    TOTAL: R$ {compra-DESCONTO}\n",
+    "    Subtotal: R$ {compra:.2f}\n",
+    "    Desconto cartão loja: R$ {DESCONTO:.2f}\n",
+    "    TOTAL: R$ {compra-DESCONTO:.2f}\n",
     "    \"\"\")\n",
     "\n",
     "else:\n",
-    "    print(f'TOTAL: R$ {compra}')\n",
+    "    print(f'TOTAL: R$ {compra:.2f}')\n",
     "\n"
    ]
   },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6aff53ae-bdfc-4d3f-a210-049d03279588",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O númeor não satisfaz as condições de ser par e positivo\n"
+      "O número '33' não satisfaz as condições de ser par e positivo\n"
      ]
     }
    ],
@@ -357,10 +357,10 @@
     "numero = int(input('Digite um número: '))\n",
     "\n",
     "if numero>0 and numero%2==0:\n",
-    "    print(\"É um número positivo e par\")\n",
+    "    print(f\" O número '{numero}' é um número positivo e par.\")\n",
     "\n",
     "else:\n",
-    "    print(\"O número não satisfaz as condições de ser par e positivo\")\n",
+    "    print(f\"O número '{numero}' não satisfaz as condições de ser par e positivo.\")\n",
     "\n"
    ]
   },
@@ -395,7 +395,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aluno aprovado!\n"
+      "\n",
+      "    NOTA: 60.0\n",
+      "    FALTAS: 6\n",
+      "    ==================\n",
+      "    ALUNO REPROVADO!\n"
      ]
     }
    ],
@@ -404,10 +408,18 @@
     "faltas = int(input(\"Qual a quantidade de faltas do aluno: \"))\n",
     "\n",
     "if nota>= 60 and faltas<=5:\n",
-    "    print('Aluno aprovado!')\n",
+    "    print(f'''\n",
+    "    NOTA: {nota}\n",
+    "    FALTAS: {faltas}\n",
+    "    ==================\n",
+    "    ALUNO APROVADO!''')\n",
     "\n",
     "else:\n",
-    "    print ('Aluno reprovado!') \n",
+    "    print(f'''\n",
+    "    NOTA: {nota}\n",
+    "    FALTAS: {faltas}\n",
+    "    ==================\n",
+    "    ALUNO REPROVADO!''')\n",
     "\n"
    ]
   },
