--- a/07 - Strings/Extra - String.ipynb
+++ b/07 - Strings/Extra - String.ipynb
@@ -628,17 +628,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "b736e8ec-0ef3-47c0-933c-4840e8cc6893",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 21 22 23 7\n",
+      "3 1 1\n"
+     ]
+    }
+   ],
    "source": [
     "texto = ''' O Serviço Nacional de Aprendizagem Industrial (SENAI) tem como objetivo estimular \n",
     "a inovação industrial por meio da educação, consultoria, pesquisa aplicada e serviços técnicos \n",
-    "e tecnológicos que são decisivos para a competitividade das empresas do Estado e do Brasil.'''\n",
-    "\n"
+    "e tecnológicos que são decisivos para a competitividade das empresas do Estado e do Brasil.''' \n",
+    "\n",
+    "\n",
+    "vogais_acento = 'á','é','í', 'ó', 'ú', 'ã'\n",
+    "\n",
+    "print (texto.count('a'),texto.count('e'),texto.count('i'),texto.count('o'),texto.count('u'))\n",
+    "print (texto.count(\"ã\"),texto.count('é'),texto.count('ó'))"
    ]
   },
   {
