--- a/07 - Strings/Extra - String.ipynb
+++ b/07 - Strings/Extra - String.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "id": "b736e8ec-0ef3-47c0-933c-4840e8cc6893",
    "metadata": {
     "tags": []
@@ -638,21 +638,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23 21 22 23 7\n",
-      "3 1 1\n"
+      " No texto existem: \n",
+      "LETRA A = 25 \n",
+      "LETRA E = 23 \n",
+      "LETRA I = 24 \n",
+      "LETRA O = 24 \n",
+      "LETRA U = 7\n",
+      "\n",
+      " No texto existem: \n",
+      "LETRA Ã = 3 \n",
+      "LETRA É = 1 \n",
+      "LETRA Ó = 1\n"
      ]
     }
    ],
    "source": [
     "texto = ''' O Serviço Nacional de Aprendizagem Industrial (SENAI) tem como objetivo estimular \n",
     "a inovação industrial por meio da educação, consultoria, pesquisa aplicada e serviços técnicos \n",
-    "e tecnológicos que são decisivos para a competitividade das empresas do Estado e do Brasil.''' \n",
+    "e tecnológicos que são decisivos para a competitividade das empresas do Estado e do Brasil.'''.lower()\n",
     "\n",
     "\n",
     "vogais_acento = 'á','é','í', 'ó', 'ú', 'ã'\n",
     "\n",
-    "print (texto.count('a'),texto.count('e'),texto.count('i'),texto.count('o'),texto.count('u'))\n",
-    "print (texto.count(\"ã\"),texto.count('é'),texto.count('ó'))"
+    "print (\" No texto existem: \\n\" + \"LETRA A =\",texto.count('a'),\"\\n\"+\"LETRA E =\",texto.count('e'),\"\\n\"+\"LETRA I =\",texto.count('i'),\"\\n\"+\"LETRA O =\",texto.count('o'),\"\\n\"+\"LETRA U =\",texto.count('u'))\n",
+    "print (\"\\n No texto existem: \\n\" + \"LETRA Ã =\",texto.count(\"ã\"),\"\\n\"+\"LETRA É =\",texto.count('é'), \"\\n\"+\"LETRA Ó =\",texto.count('ó'))"
    ]
   },
   {
