--- a/07 - Strings/Extra - String.ipynb
+++ b/07 - Strings/Extra - String.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "id": "7cc907fa-9b5e-4ab0-8983-cb4bb83d17d8",
    "metadata": {
     "tags": []
@@ -397,12 +397,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27981995x\n"
+      "27981995X\n"
      ]
     }
    ],
    "source": [
-    "rg = input('Digite seu RG (INCLUA \".\" e \"-\")')\n",
+    "rg = input('Digite seu RG (INCLUA \".\" e \"-\")').upper()\n",
     "print(rg.replace('.','').replace('-',''))\n",
     "\n"
    ]
