--- a/07 - Strings/Exercicio- String.ipynb
+++ b/07 - Strings/Exercicio- String.ipynb
@@ -28,13 +28,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ESCOLA SENAI GASPAR RICARDO JUNIOR\n"
+      "Escola Senai Gaspar Ricardo Junior\n"
      ]
     }
    ],
    "source": [
     "texto = 'escola senai gaspar ricardo junior'\n",
-    "print(texto.upper())\n",
+    "print(texto.title())\n",
     "\n"
    ]
   },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0f76e7b1-b239-46f8-9bfe-49a63054aa3b",
    "metadata": {},
    "outputs": [
@@ -178,13 +178,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A quantidade de letras digitadas é de 3\n"
+      "O texto digitado foi: ola.\n",
+      "A quantidade de letras digitadas é de 3.\n"
      ]
     }
    ],
    "source": [
     "texto = input(\"Digite um texto\")\n",
-    "print(f'A quantidade de letras digitadas é de {len(texto)}.')\n",
+    "print(f'''O texto digitado foi: {texto}.\n",
+    "A quantidade de letras digitadas é de {len(texto)}.''')\n",
     "\n"
    ]
   },
@@ -491,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "f7f2123e-e668-42f2-8514-dc3b0641dbe7",
    "metadata": {},
    "outputs": [
@@ -499,7 +501,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thiago faro\n"
+      "Thiago Faro Ribeiro\n"
      ]
     }
    ],
@@ -507,7 +509,7 @@
     "texto1 = input(\"Digite o seu primeiro nome: \")\n",
     "texto2 = input(\"Digite o seu segundo nome: \")\n",
     "\n",
-    "print(texto1,texto2)\n",
+    "print(texto1.title(),texto2.title())\n",
     "\n",
     "\n",
     "\n"
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "8cefec18-af16-4d4f-abbe-5e4ffb1becf8",
    "metadata": {},
    "outputs": [
