--- a/08 - Listas/Exercicio - Listas.ipynb
+++ b/08 - Listas/Exercicio - Listas.ipynb
@@ -20,13 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0c5c19a4-3a2e-41f6-a3b6-b14a5d5534d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Melão'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
-    "\n"
+    "\n",
+    "frutas[3]\n"
    ]
   },
   {
@@ -49,12 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b29470a-0b34-4291-96c8-2e3f99f6b952",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "numeros = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "numeros[0]\n",
     "\n"
    ]
   },
@@ -78,13 +103,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "951512e0-4c00-4479-bab0-39a486445024",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, -2, -3, -4, -5]\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [-1, -2, -3, -4, 5]\n",
-    "\n"
+    "numeros[4] = -5\n",
+    "\n",
+    "print(numeros)"
    ]
   },
   {
@@ -107,14 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4b889b4f-9ca4-4067-9ef8-6568c3ab6188",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi', 'Laranja']\n"
+     ]
+    }
+   ],
    "source": [
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
+    "frutas.append('Laranja')\n",
     "\n",
-    "\n"
+    "print (frutas)"
    ]
   },
   {
@@ -137,15 +181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "326a76a3-9924-45fe-afe7-7392ee9f6859",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maçã', 'Limão', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n"
+     ]
+    }
+   ],
    "source": [
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
-    "\n"
+    "frutas.insert(1,'Limão')\n",
+    "print(frutas)"
    ]
   },
   {
@@ -168,13 +221,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "41be04d8-b654-43d5-899c-c846dd290bb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [1, 2, 3, 5, 6, 7]\n",
-    "\n"
+    "numeros.insert(3,4)\n",
+    "\n",
+    "print(numeros)"
    ]
   },
   {
@@ -197,14 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "0adac427-216f-44cb-85e8-97462d72480e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maçã', 'Jaca', 'Melão', 'Abacaxi']\n"
+     ]
+    }
+   ],
    "source": [
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
+    "frutas.remove(\"Banana\")\n",
     "\n",
-    "\n"
+    "print (frutas)\n"
    ]
   },
   {
@@ -227,13 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3e987734-1576-4519-9984-ffab2cc95a2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [1, 2, -2, 3, 4, 5, 6, -6, 7]\n",
-    "\n"
+    "numeros.remove(-2)\n",
+    "numeros.remove(-6)\n",
+    "print(numeros)"
    ]
   },
   {
@@ -256,13 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c6170314-8b83-4342-8567-529fdd32ef14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [1, 2, 3, 4, 5, 6, 7]\n",
-    "\n"
+    "print(len(numeros))\n"
    ]
   },
   {
@@ -285,13 +375,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8a9ced68-f28a-4c89-a20f-b468a6eeaaf0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Abacaxi', 'Melão', 'Jaca', 'Banana', 'Maçã']\n"
+     ]
+    }
+   ],
    "source": [
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
-    "\n"
+    "\n",
+    "frutas.reverse()\n",
+    "\n",
+    "print (frutas)\n"
    ]
   },
   {
@@ -314,12 +415,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "652b9527-b605-4e21-b32a-b749b3c650a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[90, 80, 70, 60, 50, 40, 30, 20, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [90, 80, 70, 60, 50, 40, 30, 20, 10]\n",
+    "numeros.reverse\n",
+    "print(numeros)\n",
     "\n"
    ]
   },
@@ -343,13 +454,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9f883b00-bbbf-439b-a9f8-da6372751554",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Abacaxi', 'Banana', 'Jaca', 'Maçã', 'Melão']\n"
+     ]
+    }
+   ],
    "source": [
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
-    "\n"
+    "frutas.sort()\n",
+    "print(frutas)"
    ]
   },
   {
@@ -372,12 +492,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "d718390a-7709-4402-87bd-a24561058ed8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 20]\n"
+     ]
+    }
+   ],
    "source": [
+    "numero = int(input(\"Digite um número inteiro: \"))\n",
     "numeros = [1, 2, 3, 4, 5]\n",
+    "numeros.append(numero)\n",
+    "print(numeros)\n",
     "\n"
    ]
   },
@@ -401,12 +532,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "2445e7d8-f95c-4630-af9e-1affcd5fe603",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Abacaxi'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "numero = int(input(\"Digite um número de 0 a 4: \"))\n",
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
+    "frutas[numero]\n",
     "\n"
    ]
   },
@@ -430,13 +574,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "71493544-ec83-41e1-91ee-3bd8197fdb55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [5, 7, 8, 6, 4, 3, 2]\n",
-    "\n"
+    "print(sum(numeros))\n"
    ]
   },
   {
@@ -459,13 +611,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "2f7093e5-bbf1-46bd-900c-9422cf539033",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "letras = ['a', 'b', 'c', 'd', 'e', 'f', 'g']\n",
-    "\n"
+    "letras.index('d')\n"
    ]
   },
   {
@@ -488,14 +651,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d36304d9-572e-4c81-a5dc-f00f73718165",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f']\n"
+     ]
+    }
+   ],
    "source": [
     "letras1 = ['a', 'b', 'c']\n",
     "letras2 = ['d', 'e', 'f']\n",
-    "\n"
+    "letras3 = letras1 + letras2\n",
+    "\n",
+    "print(letras3)"
    ]
   },
   {
@@ -518,15 +691,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d66d891e-710d-487b-b204-6d85ac892b9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "numero1 = [1, 2, 3]\n",
     "numero2 = [4, 5, 6]\n",
     "numero3 = [7, 8, 9]\n",
-    "\n"
+    "numero4 = numero1 + numero2 + numero3\n",
+    "\n",
+    "print(numero4)\n"
    ]
   },
   {
@@ -554,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
