--- a/08 - Listas/Extra - Listas.ipynb
+++ b/08 - Listas/Extra - Listas.ipynb
@@ -9,25 +9,39 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c86c3e8d-614d-4cd4-b7e4-1dfe9121d796",
    "metadata": {},
    "source": [
     "### Exercício 01\n",
     "\n",
-    "Faça um programa que peça para o usuário digitar o nome de uma fruta e em seguida substitua o valor 'Malão' da lista **frutas** pelo valor informado pelo usuário. Por fim, imprima a lista de frutas atualizada"
+    "Faça um programa que peça para o usuário digitar o nome de uma fruta e em seguida substitua o valor 'Melão' da lista **frutas** pelo valor informado pelo usuário. Por fim, imprima a lista de frutas atualizada"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c67cc985-6864-4827-8334-0808fdaf9758",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maçã', 'Banana', 'Limão', 'melancia', 'Abacaxi']\n"
+     ]
+    }
+   ],
    "source": [
+    "fruta = input(\"Digite o nome de uma fruta: \")\n",
     "frutas = ['Maçã', 'Banana', 'Limão', 'Melão', 'Abacaxi']\n",
+    "frutas[3] = fruta\n",
+    "\n",
+    "print(frutas)\n",
+    "\n",
     "\n"
    ]
   },
@@ -56,14 +70,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "69635729-7931-4482-b63a-271aab6e4d8c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 2]\n"
+     ]
+    }
+   ],
    "source": [
+    "numero = int(input(\"Digite um número: \"))\n",
     "numeros = [2, 4, 6, 8, 10]\n",
+    "\n",
+    "if numero%2==0:\n",
+    "    numeros.append(numero)\n",
+    "    print(numeros)\n",
+    "else:\n",
+    "    exit\n",
+    "\n",
     "\n"
    ]
   },
@@ -90,14 +120,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "af683544-8714-4424-aced-278ae1e0a5a1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana tem 6 letras \n"
+     ]
+    }
+   ],
    "source": [
+    "numero = int(input(\"Digite um número de 0 a 5: \"))\n",
     "frutas = ['Maçã', 'Banana', 'Laranja', 'Melão', 'Abacaxi']\n",
+    "\n",
+    "fruta_escolhida =frutas[numero]\n",
+    "\n",
+    "print (f\"{frutas[numero]} tem {len(fruta_escolhida)} letras. \")\n",
+    "\n",
     "\n"
    ]
   },
@@ -121,15 +165,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6bbc7c98-134d-4c6e-b495-bb251fa13d83",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[120, 193, 262, 268, 489, 524, 626, 651, 755, 847]\n",
+      "120\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [262, 847, 193, 489, 120, 755, 651, 524, 626, 268]\n",
-    "\n"
+    "numeros.sort()\n",
+    "print(numeros)\n",
+    "print(numeros[0])"
    ]
   },
   {
@@ -155,13 +210,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8992186b-f30a-4930-8beb-821ce25c6878",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indice inválido\n"
+     ]
+    }
+   ],
    "source": [
+    "entrada = int(input(\"Digite um número de 0 a 6: \"))\n",
     "numeros = [0, 1, 2, 3, 4, 5, 6]\n",
-    "\n"
+    "\n",
+    "if entrada == 0 or entrada <=6:\n",
+    "    print(numeros[entrada])\n",
+    "else: \n",
+    "    print (\"Indice inválido\")"
    ]
   },
   {
@@ -184,13 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1c257b17-8200-4781-b0c7-dad9d61209a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi', 'manga']\n"
+     ]
+    }
+   ],
    "source": [
+    "nome = input('Digite o nome de uma fruta: ')\n",
     "frutas = ['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi']\n",
-    "\n"
+    "frutas.append(nome)\n",
+    "\n",
+    "print(frutas)\n"
    ]
   },
   {
@@ -213,13 +292,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c6683196-5973-4512-bde3-0e0faa057c86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0\n"
+     ]
+    }
+   ],
    "source": [
     "notas = [9, 6, 5, 8]\n",
-    "\n"
+    "print(sum(notas)/4)"
    ]
   },
   {
@@ -242,14 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a5b64bc6-5fd8-4750-b861-65ace45c97a7",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número digitado foi o 9. Ele se repete 1\n"
+     ]
+    }
+   ],
    "source": [
+    "entrada = int(input(\"Digite um número de 0 a 9: \"))\n",
     "numeros = [2, 5, 1, 5, 8, 0, 3, 5, 4, 0, 6, 8, 5, 0, 3, 3, 6, 6, 0, 1, 0, 0, 9, 7, 5, 0, 2, 0]\n",
+    "print(f'O número digitado foi o {entrada}. Ele se repete {numeros.count(entrada)}')\n",
     "\n",
     "\n"
    ]
@@ -279,14 +376,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "76b34781-fade-408e-881f-801d30899983",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5', 'a', 'e', 'i', 'o', 'u', '20']\n"
+     ]
+    }
+   ],
    "source": [
+    "entrada = input(\"Digite um número: \")\n",
     "valores = ['1', '2', '3', '4', '5', 'a', 'e', 'i', 'o', 'u']\n",
+    "\n",
+    "if entrada in valores:\n",
+    "    valores.remove(entrada)\n",
+    "    print(valores)\n",
+    "else:\n",
+    "   valores.append(entrada)\n",
+    "   print(valores)\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -311,13 +425,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "86b0cc93-0eeb-4134-8a54-e2aaec2defa2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A sua média é: 9.5\n"
+     ]
+    }
+   ],
    "source": [
+    "notas = []\n",
+    "n1 = float(input(\"Digite sua primeira nota: \"))\n",
+    "n2 = float(input(\"Digite sua segunda nota: \"))\n",
+    "notas.append(n1)\n",
+    "notas.append(n2)\n",
+    "\n",
+    "print(f'A sua média é: {sum(notas)/2}')\n",
     "\n",
     "\n"
    ]
@@ -342,15 +471,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "20d24d3f-7d1f-4bd6-9660-54cf130763dd",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [2, 7, 3, 9, 0, 5, 1, 4, 6, 8]\n",
-    "\n"
+    "numeros.sort(reverse=True)\n",
+    "\n",
+    "print(numeros)\n"
    ]
   },
   {
@@ -378,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
