--- a/08 - Listas/Extra - Listas.ipynb
+++ b/08 - Listas/Extra - Listas.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "c67cc985-6864-4827-8334-0808fdaf9758",
    "metadata": {
     "tags": []
@@ -31,12 +31,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Maçã', 'Banana', 'Limão', 'melancia', 'Abacaxi']\n"
+      "['Maçã', 'Banana', 'Limão', 'Melancia', 'Abacaxi']\n"
      ]
     }
    ],
    "source": [
-    "fruta = input(\"Digite o nome de uma fruta: \")\n",
+    "fruta = input(\"Digite o nome de uma fruta: \").title()\n",
     "frutas = ['Maçã', 'Banana', 'Limão', 'Melão', 'Abacaxi']\n",
     "frutas[3] = fruta\n",
     "\n",
