--- a/08 - Listas/Exercicio - Listas.ipynb
+++ b/08 - Listas/Exercicio - Listas.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "4b889b4f-9ca4-4067-9ef8-6568c3ab6188",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Maçã', 'Banana', 'Jaca', 'Melão', 'Abacaxi', 'Laranja']\n"
+      "None\n"
      ]
     }
    ],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "3e987734-1576-4519-9984-ffab2cc95a2a",
    "metadata": {},
    "outputs": [
@@ -315,6 +315,8 @@
     "numeros = [1, 2, -2, 3, 4, 5, 6, -6, 7]\n",
     "numeros.remove(-2)\n",
     "numeros.remove(-6)\n",
+    "\n",
+    "\n",
     "print(numeros)"
    ]
   },
@@ -415,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "652b9527-b605-4e21-b32a-b749b3c650a6",
    "metadata": {},
    "outputs": [
@@ -423,13 +425,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[90, 80, 70, 60, 50, 40, 30, 20, 10]\n"
+      "[10, 20, 30, 40, 50, 60, 70, 80, 90]\n"
      ]
     }
    ],
    "source": [
     "numeros = [90, 80, 70, 60, 50, 40, 30, 20, 10]\n",
-    "numeros.reverse\n",
+    "numeros.reverse()\n",
+    "\n",
     "print(numeros)\n",
     "\n"
    ]
@@ -532,17 +535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "2445e7d8-f95c-4630-af9e-1affcd5fe603",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Abacaxi'"
+       "'Melão'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "d66d891e-710d-487b-b204-6d85ac892b9a",
    "metadata": {},
    "outputs": [
@@ -699,7 +702,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+      "45\n"
      ]
     }
    ],
