--- a/08 - Listas/In Not In/Extra - Listas Operadores In e Not In.ipynb
+++ b/08 - Listas/In Not In/Extra - Listas Operadores In e Not In.ipynb
@@ -525,7 +525,7 @@
     }
    ],
    "source": [
-    "sku = input(\"Digite o sku do produto desejado: \")\n",
+    "sku = input(\"Digite o sku do produto desejado: \").upper()\n",
     "sku_list = ['ALG40BRA', 'ALG40PRE', 'ALG40AMA', 'ALG40AZU']\n",
     "\n",
     "if sku.__contains__(\"ALG40\") and sku.__contains__(\"BRA\"):\n",
