--- a/08 - Listas/introduçao.ipynb
+++ b/08 - Listas/introduçao.ipynb
@@ -271,6 +271,146 @@
     "lista = [3,4,5,2,1]\n",
     "print(sum(lista))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abacaxi\n",
+      "melão\n",
+      "jaca\n",
+      "banana\n",
+      "maçã\n",
+      "abacaxi\n",
+      "melão\n",
+      "jaca\n",
+      "banana\n",
+      "maçã\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lista com indexação negativa\n",
+    "\n",
+    "lista = ['maçã', 'banana','jaca','melão', 'abacaxi']\n",
+    "print(lista[-1])\n",
+    "print(lista[-2])\n",
+    "print(lista[-3])\n",
+    "print(lista[-4])\n",
+    "print(lista[-5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "P\n"
+     ]
+    }
+   ],
+   "source": [
+    "python = \"Python\"\n",
+    "\n",
+    "print(python[-1])\n",
+    "print(python[-2])\n",
+    "print(python[-3])\n",
+    "print(python[-4])\n",
+    "print(python[-5])\n",
+    "print(python[-6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['maçã', 'banana', 'jaca', 'melão']\n",
+      "['maçã', 'banana', 'jaca']\n",
+      "['maçã', 'banana']\n",
+      "['maçã']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = ['maçã', 'banana','jaca','melão', 'abacaxi']\n",
+    "print(lista[:-1])\n",
+    "print(lista[:-2])\n",
+    "print(lista[:-3])\n",
+    "print(lista[:-4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abacaxi']\n",
+      "['melão', 'abacaxi']\n",
+      "['jaca', 'melão', 'abacaxi']\n",
+      "['banana', 'jaca', 'melão', 'abacaxi']\n",
+      "['maçã', 'banana', 'jaca', 'melão', 'abacaxi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = ['maçã', 'banana','jaca','melão', 'abacaxi']\n",
+    "print(lista[-1:])\n",
+    "print(lista[-2:])\n",
+    "print(lista[-3:])\n",
+    "print(lista[-4:])\n",
+    "print(lista[-5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abacaxi', 'melão', 'jaca', 'banana', 'maçã']\n",
+      "['abacaxi', 'jaca', 'maçã']\n",
+      "['abacaxi', 'banana']\n",
+      "['abacaxi', 'maçã']\n",
+      "['abacaxi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# passo negativo\n",
+    "\n",
+    "lista = ['maçã', 'banana','jaca','melão', 'abacaxi']\n",
+    "print(lista[::-1])\n",
+    "print(lista[::-2])\n",
+    "print(lista[::-3])\n",
+    "print(lista[::-4])\n",
+    "print(lista[::-5])\n"
+   ]
   }
  ],
  "metadata": {
