--- a/08 - Listas/indexação Negativa/Exercicio - Listas Indexação negativa.ipynb
+++ b/08 - Listas/indexação Negativa/Exercicio - Listas Indexação negativa.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "50f86f2c-08c0-48ad-af66-ac618efd94d2",
    "metadata": {
     "tags": []
@@ -331,14 +331,14 @@
        "['SAB', 'DOM']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "semana = ['SEG', 'TER', 'QUA', 'QUI', 'SEX', 'SAB', 'DOM']\n",
-    "semana[-2::]\n",
+    "semana[-2:]\n",
     "\n"
    ]
   },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "1970cbb7-fb1e-4b1f-a534-79146d10d1ea",
    "metadata": {},
    "outputs": [
@@ -424,14 +424,14 @@
        "'1999'"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = '20/01/1999'\n",
-    "data[-4::]\n",
+    "data[-4:]\n",
     "\n"
    ]
   },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "1251bf0b-41f4-4467-a8ca-91218cda41a4",
    "metadata": {
     "tags": []
@@ -475,8 +475,9 @@
    "source": [
     "local = 'Sorocaba - SP'\n",
     "\n",
-    "if local[-2::] == \"SP\":\n",
+    "if local[-2:] == \"SP\":\n",
     "    print(\"Voce mora em Sao Paulo\")\n",
+    "\n",
     "else:\n",
     "    print (\"Voce nao esta em São Paulo'\")\n",
     " "
